@@ -15,28 +15,94 @@
     provides="eea.rdfrepository.interfaces.IRDFPortletInfo" />
 
   <adapter factory=".relations.Relations" />
-
   <adapter factory=".promotion.Promotion" />
-
   <adapter factory=".content.Article.Article2Surf" />
+  <adapter factory=".subtypes.GeotagSingleEdit"/>
+  <adapter factory=".subtypes.GeotagMultiEdit"/>
 
   <adapter name="eea.locationfield"
     for="Products.Archetypes.interfaces.IBaseContent"
     factory=".subtypes.LocationSchemaExtender"/>
 
-  <adapter name="eea.locationfield"
-    for="Products.EEAContentTypes.content.interfaces.IQuickEvent"
-    factory=".subtypes.QuickEventSchemaModifier"/>
-
   <adapter name="eea.themesfield"
     for="Products.Archetypes.interfaces.IBaseContent"
     factory=".subtypes.ThemesSchemaExtender"/>
 
-  <adapter name="eea.requiredfields"
-    for="Products.Archetypes.interfaces.IBaseContent"
-    factory=".subtypes.RequiredSchemaModifier"/>
+  <!-- Required fields -->
 
-  <adapter factory=".subtypes.GeotagSingleEdit"/>
-  <adapter factory=".subtypes.GeotagMultiEdit"/>
+  <!-- Article -->
+  <class class="Products.EEAContentTypes.content.Article.Article">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!-- Highlight -->
+  <class class="Products.EEAContentTypes.content.Highlight.Highlight">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!-- PressRelease -->
+  <class class="Products.EEAContentTypes.content.PressRelease.PressRelease">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!-- Speech -->
+  <class class="Products.EEAContentTypes.content.Speech.Speech">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!-- Country profile -->
+  <class class="eea.soer.content.DiversityReport.DiversityReport">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!-- Data -->
+  <class class="eea.dataservice.content.Data.Data">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!-- Figure -->
+  <class class="eea.dataservice.content.EEAFigure.EEAFigure">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!--Policy Document -->
+  <class class="eea.indicators.content.PolicyDocumentReference.PolicyDocumentReference">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!-- Animation -->
+  <class class="Products.EEAContentTypes.content.FlashFile.FlashFile">
+    <implements interface="Products.EEAContentTypes.interfaces.IRequiredFields" />
+  </class>
+
+  <!-- Required fields adapter -->
+  <adapter name="eea.requiredfields"
+    for="Products.EEAContentTypes.interfaces.IRequiredFields"
+    factory=".subtypes.RequiredSchemaModifier" />
+
+  <!-- Publication -->
+  <adapter name="eea.requiredfields4publication"
+    for="eea.reports.interfaces.IReportContainerEnhanced"
+    factory=".subtypes.RequiredSchemaModifier" />
+
+  <!-- Video -->
+  <adapter name="eea.requiredfields4video"
+    for="p4a.video.interfaces.IVideoEnhanced"
+    factory=".subtypes.RequiredSchemaModifier" />
+
+  <!-- EcoTip, Page, SOER Key fact, SOER Message -->
+  <adapter name="eea.requiredfields4document"
+    for="Products.ATContentTypes.interfaces.IATDocument"
+    factory=".subtypes.RequiredByPortalTypeSchemaModifier" />
+
+  <!-- Eyewitness story -->
+  <adapter name="eea.requiredfields4folder"
+    for="Products.ATContentTypes.interfaces.IATFolder"
+    factory=".subtypes.RequiredByPortalTypeSchemaModifier" />
+
+  <!-- GIS Map Application -->
+  <adapter name="eea.requiredfields4link"
+    for="Products.ATContentTypes.interfaces.IATLink"
+    factory=".subtypes.RequiredByPortalTypeSchemaModifier" />
 
 </configure>
