@@ -33,8 +33,6 @@ for fieldname in getNames(ExternalHighlightSchema):
         field.schemata = 'Front Page'
 
 Highlight_schema['text'].required = True
-Highlight_schema['location'].required = True
-Highlight_schema['subject'].required = True
 Highlight_schema.moveField('image', before='imageCaption')
 
 
