@@ -3,6 +3,8 @@ Changelog
 
 4.6-dev - (unreleased)
 ----------------------
+ * Bug fix: Fixed required themes, subject and location fields for specified content-types
+   [voineali #4694]
  * Bug fix: show only date in event_view and quickevent_view [tiberich #4763]
 
 4.5 - (2011-11-28)
